--- a/index.html
+++ b/index.html
@@ -13,8 +13,13 @@
 </head>
 
 <body>
-	<h1>Howdy FED2425</h1>
+	<main>
+		<h1>Howdy FED2425</h1>
+	</main>
+	
+	<footer>
 
+	</footer>
 	<script defer src="scripts/script.js"></script>
 </body>
 	
