--- a/index.html
+++ b/index.html
@@ -6,19 +6,42 @@
 	<meta name="author" content="jouw naam">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	
-	<title>Howdy FED2425</title>
+	<title>My drama list. Discover, discuss and organize the best asian dramas & movies for your entertainment. </title>
 	
 	<link href="styles/style.css" rel="stylesheet">
-	<link rel="icon" type="image/svg+xml" href="images/favicon.svg">
+	<link rel="icon" type="image/svg+xml" href="images/favicon.png">
 </head>
 
 <body>
-	<main>
-		<h1>Howdy FED2425</h1>
-	</main>
-	
-	<footer>
+<!--HEADER-->
+	<header>
+		<nav>
+			<ul>
+				<li>MDL</li>
+			</ul>
+		</nav>
+	</header>
 
+<!--MAIN-->
+	<main>
+		<h1>Discover, discuss and organize</h1>
+
+		<section>
+
+		</section>
+
+		<section>
+			<ul>
+				<li><a href="#"> Featured </a></li>
+				<li><a href="#"> Recent </a></li>
+				<li><a href="#"> Editorials </a></li>
+			</ul>
+		</section>
+	</main>
+
+<!--FOOTER-->	
+	<footer>
+		<h2> footer</h2>
 	</footer>
 	<script defer src="scripts/script.js"></script>
 </body>
