--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<title>My drama list. Discover, discuss and organize the best asian dramas & movies for your entertainment. </title>
 	
 	<link href="styles/style.css" rel="stylesheet">
-	<link rel="icon" type="image/svg+xml" href="images/favicon.png">
+	<link rel="icon" type="image/svg+xml" href="../FED-Herkansing-24-25/images/favicon.png">
 </head>
 
 <body>
@@ -24,7 +24,7 @@
 
 <!--MAIN-->
 	<main>
-		<h1>Discover, discuss and organize</h1>
+		<h1>Discover, Discuss and Organize</h1>
 
 		<section>
 
@@ -37,12 +37,21 @@
 				<li><a href="#"> Editorials </a></li>
 			</ul>
 		</section>
+
+		<section>
+			<h2>Latest Reviews</h2>
+			<a href="#">more >></a>
+			<ul> 
+				<li><a href="#"><img src="" alt=""></a></li>
+			</ul>
+		</section>
 	</main>
 
 <!--FOOTER-->	
 	<footer>
 		<h2> footer</h2>
 	</footer>
+
 	<script defer src="scripts/script.js"></script>
 </body>
 	
