--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<title>My drama list. Discover, discuss and organize the best asian dramas & movies for your entertainment. </title>
 	
 	<link href="styles/style.css" rel="stylesheet">
+	<link href="styles/index.css" rel="stylesheet">
 	<link rel="icon" type="image/svg+xml" href="../FED-Herkansing-24-25/images/favicon.png">
 </head>
 
@@ -71,6 +72,7 @@
 				<li><a href="#"><img src="../FED-Herkansing-24-25/images/goldenkamuy.jpg" alt="Golden Kamuy"></a></li>
 				<li><a href="#"><img src="../FED-Herkansing-24-25/images/goldenkamuy.jpg" alt="Golden Kamuy"></a></li>
 				<li><a href="#"><img src="../FED-Herkansing-24-25/images/goldenkamuy.jpg" alt="Golden Kamuy"></a></li>
+			
 			</ul>
 		</section>
 
