--- a/index.html
+++ b/index.html
@@ -62,16 +62,25 @@
 			<h2>Trending this week</h2>
 			<a href="#">more >></a>
 			<ul> 
-				<li><a href="#"><img src="../FED-Herkansing-24-25/images/goldenkamuy.jpg" alt="Golden Kamuy"></a></li>
-				<li><a href="#"><img src="../FED-Herkansing-24-25/images/goldenkamuy.jpg" alt="Golden Kamuy"></a></li>
-				<li><a href="#"><img src="../FED-Herkansing-24-25/images/goldenkamuy.jpg" alt="Golden Kamuy"></a></li>
-				<li><a href="#"><img src="../FED-Herkansing-24-25/images/goldenkamuy.jpg" alt="Golden Kamuy"></a></li>
-				<li><a href="#"><img src="../FED-Herkansing-24-25/images/goldenkamuy.jpg" alt="Golden Kamuy"></a></li>
-				<li><a href="#"><img src="../FED-Herkansing-24-25/images/goldenkamuy.jpg" alt="Golden Kamuy"></a></li>
-				<li><a href="#"><img src="../FED-Herkansing-24-25/images/goldenkamuy.jpg" alt="Golden Kamuy"></a></li>
-				<li><a href="#"><img src="../FED-Herkansing-24-25/images/goldenkamuy.jpg" alt="Golden Kamuy"></a></li>
-				<li><a href="#"><img src="../FED-Herkansing-24-25/images/goldenkamuy.jpg" alt="Golden Kamuy"></a></li>
-				<li><a href="#"><img src="../FED-Herkansing-24-25/images/goldenkamuy.jpg" alt="Golden Kamuy"></a></li>
+				<li>
+					<a href="#"><img src="../FED-Herkansing-24-25/images/goldenkamuy.jpg" alt="Golden Kamuy"> <p> Golden Kamuy</p></a>
+					<p>Japanese Drama</p>
+				</li>
+
+				<li>
+					<a href="#"><img src="../FED-Herkansing-24-25/images/goldenkamuy.jpg" alt="Golden Kamuy"> <p> Golden Kamuy</p></a>
+					<p>Japanese Drama</p>
+				</li>
+
+				<li>
+					<a href="#"><img src="../FED-Herkansing-24-25/images/goldenkamuy.jpg" alt="Golden Kamuy"> <p> Golden Kamuy</p></a>
+					<p>Japanese Drama</p>
+				</li>
+
+				<li>
+					<a href="#"><img src="../FED-Herkansing-24-25/images/goldenkamuy.jpg" alt="Golden Kamuy"> <p> Golden Kamuy</p></a>
+					<p>Japanese Drama</p>
+				</li>
 			
 			</ul>
 		</section>
