--- a/index.html
+++ b/index.html
@@ -187,18 +187,44 @@
 				<li><a href="#"> Instagram </a></li>
 				<li><a href="#"> Youtube </a></li>
 			</ul>
+			<ul>
+				<li><a href="#"> </a></li>
+				<li><a href="#">  </a></li>
+
+			</ul>
 		</section>
 
 		<section>
 			<h3>About</h3>
+			<ul>
+				<li><a href="#"> <abbr title="Frequently asked questions">FAQ</abbr> </a></li>
+				<li><a href="#"> About us </a></li>
+				<li><a href="#"> Contact </a></li>
+				<li><a href="#"> Terms </a></li>
+				<li><a href="#"> Privacy </a></li>
+				<li><a href="#"> Support us </a></li>
+
+
+			</ul>
+
 		</section>
 
 		<section>
 			<h3>Work with us</h3>
+			<ul>
+				<li><a href="#"> Advertise </a></li>
+				<li><a href="#"> API </a></li>
+			</ul>
 		</section>
 
 		<section>
 			<h3>Recommended</h3>
+			<ul>
+				<li><a href="#"> K-drama calendar </a></li>
+				<li><a href="#"> Top 100 Korean dramas </a></li>
+				<li><a href="#"> Top 100 Japansese dramas </a></li>
+				<li><a href="#"> Top 100 Chinese dramas </a></li>
+			</ul>	
 		</section>
 	</footer>
 
