--- a/index.html
+++ b/index.html
@@ -16,14 +16,40 @@
 <body>
 <!--HEADER-->
 	<header>
+		<button aria-hidden="true"><img src="../FED-Herkansing-24-25/images/iconen/menuburgerwhite.svg" alt="menu open"/></button>
+
 		<nav>
+			<button aria-hidden="true"><img src="../FED-Herkansing-24-25/images/iconen/menhamburgersluit.svg" alt="menu sluiten"/></button>
 			<ul>
-				<li>MDL</li>
-				<li>taal</li>
-				<li>(icoon)</li>
-				<li>(icoon)</li>
-				<li>profiel foto, menu</li>
-				<li>menu </li>
+				<li><h3>Home</h3></li>
+				<li><a href="#">Hide ads</a></li>
+				<li><a href="#">Calendar</a></li>
+				<li><a href="#">Lists</a></li>
+				<li><a href="#">Feeds</a></li>
+				<li><a href="#">Articles</a></li>
+				<li><a href="#">Trailers</a></li>
+				<li><a href="#">Forms</a></li>
+				<li><a href="#">Contributors</a></li>
+				<li><a href="#">Games</a></li>
+				<li><a href="#">Stats Leaderboard</a></li>
+
+				<li><h3>Shows</h3></li>
+				<li><a href="#">Tops Shows</a></li>
+				<li><a href="#">Most Popular Shows</a></li>
+				<li><a href="#">Variety Shows</a></li>
+				<li><a href="#">Upcoming</a></li>
+				<li><a href="#">Reviews</a></li>
+				<li><a href="#">Recommendations</a></li>
+
+				<li><h3>Movies</h3></li>
+				<li><a href="#">Top Movies</a></li>
+				<li><a href="#">Most Popular Movies</a></li>
+				<li><a href="#">Upcoming</a></li>
+				<li><a href="#">Reviews</a></li>
+				<li><a href="#">Recommendations</a></li>
+
+				<li><h3>People</h3></li>
+				<li><a href="#">Top Actos</a></li>
 			</ul>
 		</nav>
 	</header>
@@ -34,7 +60,24 @@
 
 	<!--1-->	
 		<section>
-			<!---afbeeldingkies-->
+			<article>
+				<h2>"Love Next door" Actors Bid Farewell with Final Remarks</h2>
+				<p>News</p>
+				<img src="../FED-Herkansing-24-25/images/section1/lovenextdoor.jpeg" alt="">
+
+			</article>
+
+			<article>
+				<h2>Kang Mi Na will reportedly reunite with Ji Chang Wook and Seo In Guk in the upcoming superhero K-drama</h2>
+				<p>News</p>
+				<img src="../FED-Herkansing-24-25/images/section1/superhero.jpg" alt="">
+			</article>
+
+			<article>
+				<h2>Netflix Releases Stills and Posters for "Uprising"</h2>
+				<p>News</p>
+				<img src="../FED-Herkansing-24-25/images/section1/uprising.jpeg" alt="">
+			</article>
 		</section>
 
 	<!--2-->
@@ -83,23 +126,6 @@
 			</ul>
 		</section>
 
-	<!--5-->	
-		<section>
-			<h2>Shows staring this week</h2>
-			<a href="#">more >></a>
-			<ul> 
-				<li><a href="#"><img src="" alt=""></a></li>
-			</ul>
-		</section>
-
-	<!--6-->	
-		<section>
-			<h2>Shows ending this week</h2>
-			<a href="#">more >></a>
-			<ul> 
-				<li><a href="#"><img src="" alt=""></a></li>
-			</ul>
-		</section>
 
 	<!--7-->	
 		<section>
@@ -112,15 +138,15 @@
 	
 	<!--8-->	
 		<section>
-			<h2>Who's the most loved actor on MDL?</h2>
+			<h2>Popular voting lists?</h2>
 			<a href="#">more >></a>
 
-			<h3>Best Actresses</h3>
+			<h3>Best K-dramas for beginners</h3>
 			<ul> 
 				<li><a href="#"><img src="" alt=""></a></li>
 			</ul>
 
-			<h3>Best Actors</h3>
+			<h3>Help me pick my next wacth!</h3>
 			<ul> 
 				<li><a href="#"><img src="" alt=""></a></li>
 			</ul>
@@ -138,36 +164,6 @@
 				<li><a href="#"> Taiwan </a></li>
 				<li><a href="#"> Thailand </a></li>
 				<li><a href="#"> Philipines </a></li>
-			</ul>
-		</section>
-
-	<!--10-->	
-		<section>
-			<h2>Top upcoming shows</h2>
-			<a href="#">more >></a>
-			<ul>
-				<li><a href="#">  </a></li>
-				<li><a href="#">  </a></li>
-				<li><a href="#">  </a></li>
-				<li><a href="#">  </a></li>
-				<li><a href="#">  </a></li>
-				<li><a href="#">  </a></li>
-				<li><a href="#">  </a></li>
-			</ul>
-		</section>
-
-	<!--10-->	
-		<section>
-			<h2>Most popular shows</h2>
-			<a href="#">more >></a>
-			<ul>
-				<li><a href="#">  </a></li>
-				<li><a href="#">  </a></li>
-				<li><a href="#">  </a></li>
-				<li><a href="#">  </a></li>
-				<li><a href="#">  </a></li>
-				<li><a href="#">  </a></li>
-				<li><a href="#">  </a></li>
 			</ul>
 		</section>
 	</main>
