--- a/index.html
+++ b/index.html
@@ -87,6 +87,15 @@
 				<li><a href="#"> Recent </a></li>
 				<li><a href="#"> Editorials </a></li>
 			</ul>
+
+			<ul>
+				<li>
+					<a href="#"><img src="../FED-Herkansing-24-25/images/section2/lovenextdoor.jpg" alt="Love Next Door Actors Bid Farewell with Final Remarks"> </a>
+					<h3>Love Next Door Actors Bid Farewell with Final Remarks</h3>
+					<p>News</p>
+				</li>
+			</ul>
+
 		</section>
 
 	<!--3-->	
@@ -146,7 +155,7 @@
 				<li><a href="#"><img src="" alt=""></a></li>
 			</ul>
 
-			<h3>Help me pick my next wacth!</h3>
+			<h3>Help me pick my next watch!</h3>
 			<ul> 
 				<li><a href="#"><img src="" alt=""></a></li>
 			</ul>
