--- a/index.html
+++ b/index.html
@@ -18,10 +18,13 @@
 	<header>
 		<button aria-hidden="true"><img src="../FED-Herkansing-24-25/images/iconen/menuburgerwhite.svg" alt="menu open"/></button>
 
+		<button aria-hidden="true"><img src="../FED-Herkansing-24-25/images/iconen/bell.svg" alt="menu open"/></button>
+
+
 		<nav>
 			<button aria-hidden="true"><img src="../FED-Herkansing-24-25/images/iconen/menhamburgersluit.svg" alt="menu sluiten"/></button>
 			<ul>
-				<li><h3>Home</h3></li>
+				<li><h2>Home</h2></li>
 				<li><a href="#">Hide ads</a></li>
 				<li><a href="#">Calendar</a></li>
 				<li><a href="#">Lists</a></li>
@@ -33,7 +36,7 @@
 				<li><a href="#">Games</a></li>
 				<li><a href="#">Stats Leaderboard</a></li>
 
-				<li><h3>Shows</h3></li>
+				<li><h2>Shows</h2></li>
 				<li><a href="#">Tops Shows</a></li>
 				<li><a href="#">Most Popular Shows</a></li>
 				<li><a href="#">Variety Shows</a></li>
@@ -41,14 +44,14 @@
 				<li><a href="#">Reviews</a></li>
 				<li><a href="#">Recommendations</a></li>
 
-				<li><h3>Movies</h3></li>
+				<li><h2>Movies</h2></li>
 				<li><a href="#">Top Movies</a></li>
 				<li><a href="#">Most Popular Movies</a></li>
 				<li><a href="#">Upcoming</a></li>
 				<li><a href="#">Reviews</a></li>
 				<li><a href="#">Recommendations</a></li>
 
-				<li><h3>People</h3></li>
+				<li><h2>People</h2></li>
 				<li><a href="#">Top Actos</a></li>
 			</ul>
 		</nav>
@@ -90,11 +93,37 @@
 
 			<ul>
 				<li>
-					<a href="#"><img src="../FED-Herkansing-24-25/images/section2/lovenextdoor.jpg" alt="Love Next Door Actors Bid Farewell with Final Remarks"> </a>
+					<a href="#"><img src="../FED-Herkansing-24-25/images/section2/lovenextdoor.jpg" alt="Love Next Door Actors"> </a>
 					<h3>Love Next Door Actors Bid Farewell with Final Remarks</h3>
 					<p>News</p>
 				</li>
+
+				<li>
+					<a href="#"><img src="../FED-Herkansing-24-25/images/section2/superhero.jpg" alt="Kang Mi Na, Ji Chang Wook and Seo In Guk "> </a>
+					<h3>Kang Mi Na will reportedly reunite with Ji Chang Wook and Seo In Guk in the upcoming superhero K-drama</h3>
+					<p>News</p>
+				</li>
+
+				<li>
+					<a href="#"><img src="../FED-Herkansing-24-25/images/section2/superhero.jpg" alt="Myths and Legends of Asia"> </a>
+					<h3>Myths and Legends of Asia</h3>
+					<p>Editorials</p>
+				</li>
+
+				<li>
+					<a href="#"><img src="../FED-Herkansing-24-25/images/section2/superhero.jpg" alt="Posters for Uprising"> </a>
+					<h3>Netflix Releases Still and Posters for "Uprising"</h3>
+					<p>News</p>
+				</li>
+
+				<li>
+					<a href="#"><img src="../FED-Herkansing-24-25/images/section2/superhero.jpg" alt="Jeongwoo "> </a>
+					<h3>"A Shop for Killers" Park Jeong Woo to join the cast of the upcoming K-drama "Spice up Our Love"</h3>
+					<p>News</p>
+				</li>
 			</ul>
+
+			<a href="#">Show More</a>
 
 		</section>
 
@@ -113,23 +142,33 @@
 			<a href="#">more >></a>
 			<ul> 
 				<li>
-					<a href="#"><img src="../FED-Herkansing-24-25/images/goldenkamuy.jpg" alt="Golden Kamuy"> <p> Golden Kamuy</p></a>
+					<a href="#"><img src="../FED-Herkansing-24-25/images/posters/businessproposal.jpg" alt="Business proposal"> <p> Business Proposal</p></a>
+					<p>Korean Drama</p>
+				</li>
+
+				<li>
+					<a href="#"><img src="../FED-Herkansing-24-25/images/posters/lovenextdoor.jpg" alt="Love next door"> <p> Love Next Door</p></a>
+					<p>Korean Drama</p>
+				</li>
+
+				<li>
+					<a href="#"><img src="../FED-Herkansing-24-25/images/posters/goldenkamuy.jpg" alt="Golden Kamuy"> <p> Golden Kamuy</p></a>
 					<p>Japanese Drama</p>
 				</li>
 
 				<li>
-					<a href="#"><img src="../FED-Herkansing-24-25/images/goldenkamuy.jpg" alt="Golden Kamuy"> <p> Golden Kamuy</p></a>
-					<p>Japanese Drama</p>
+					<a href="#"><img src="../FED-Herkansing-24-25/images/posters/blackout.jpg" alt="Black out"> <p> Black Out</p></a>
+					<p>Korean Drama</p>
 				</li>
 
 				<li>
-					<a href="#"><img src="../FED-Herkansing-24-25/images/goldenkamuy.jpg" alt="Golden Kamuy"> <p> Golden Kamuy</p></a>
-					<p>Japanese Drama</p>
+					<a href="#"><img src="../FED-Herkansing-24-25/images/posters/alchemyofsouls.jpg" alt="Alchemy of Souls"> <p> Alchemy of Souls</p></a>
+					<p>Korean Drama</p>
 				</li>
 
 				<li>
-					<a href="#"><img src="../FED-Herkansing-24-25/images/goldenkamuy.jpg" alt="Golden Kamuy"> <p> Golden Kamuy</p></a>
-					<p>Japanese Drama</p>
+					<a href="#"><img src="../FED-Herkansing-24-25/images/posters/vincenzo.jpg" alt="vincenzo"> <p> Vincenzo</p></a>
+					<p>Korean Drama</p>
 				</li>
 			
 			</ul>
@@ -174,6 +213,15 @@
 				<li><a href="#"> Thailand </a></li>
 				<li><a href="#"> Philipines </a></li>
 			</ul>
+
+			<ol>
+				<li>
+					<a href="#"><img src="../FED-Herkansing-24-25/images/section2/superhero.jpg" alt="Kang Mi Na, Ji Chang Wook and Seo In Guk "> </a>
+					<h3>Kang Mi Na will reportedly reunite with Ji Chang Wook and Seo In Guk in the upcoming superhero K-drama</h3>
+					<p>News</p>
+					<button><img src="../FED-Herkansing-24-25/images/iconen/plus.svg" alt="Add drama to watch list"></button>
+				</li>
+			</ol>
 		</section>
 	</main>
 
