--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 	<header>
 		<button aria-hidden="true"><img src="../FED-Herkansing-24-25/images/iconen/menuburgerwhite.svg" alt="menu open"/></button>
 
-		<button aria-hidden="true"><img src="../FED-Herkansing-24-25/images/iconen/bell.svg" alt="menu open"/></button>
+		<button aria-hidden="true"><img src="../FED-Herkansing-24-25/images/iconen/searchiconwhite.svg" alt="search "/></button>
+		<button aria-hidden="true"><img src="../FED-Herkansing-24-25/images/iconen/bell.svg" alt="notifications"/></button>
 
 
 		<nav>
