--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 <!--HEADER-->
 	<header>
 		<button aria-hidden="true"><img src="../FED-Herkansing-24-25/images/iconen/menuburgerwhite.svg" alt="menu open"/></button>
-
+		
 		<button aria-hidden="true"><img src="../FED-Herkansing-24-25/images/iconen/searchiconwhite.svg" alt="search "/></button>
 		<button aria-hidden="true"><img src="../FED-Herkansing-24-25/images/iconen/bell.svg" alt="notifications"/></button>
-
+		<button aria-hidden="true"><img src="../FED-Herkansing-24-25/images/iconen/" alt="profile "/></button>
 
 		<nav>
 			<button aria-hidden="true"><img src="../FED-Herkansing-24-25/images/iconen/menhamburgersluit.svg" alt="menu sluiten"/></button>
