--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 	<main>
 		<h1>Discover, Discuss and Organize</h1>
 
-	<!--1-->	
+	<!--1  VERANDEREN NAAR EEN UL LI A-->	
 		<section>
 			<article>
 				<h2>"Love Next door" Actors Bid Farewell with Final Remarks</h2>
