--- a/index.html
+++ b/index.html
@@ -86,6 +86,10 @@
 					<img src="../FED-Herkansing-24-25/images/section1/uprising.jpeg" alt="">
 				</li>
 			</ul>
+
+			<button class="prev" onclick="moveSlide(-1)">&#10094;</button>
+			<button class="next" onclick="moveSlide(1)">&#10095;</button>
+
 		</section>
 <!--EIND-section 1-->
 
@@ -244,14 +248,14 @@
 			<img src="../FED-Herkansing-24-25/images/iconen/footerlogo.webp" alt="My drama list logo in de footer">
 			
 			<ul>
-				<li><a href="#"> Facebook </a></li>
-				<li><a href="#"> X </a></li>
-				<li><a href="#"> Instagram </a></li>
-				<li><a href="#"> Youtube </a></li>
+				<li><a href="#"><img src="" alt="Mydramalist facebook pagina"></a></li>
+				<li><a href="#"><img src="" alt="Mydramalist X pagina"> </a></li>
+				<li><a href="#"><img src="" alt="Mydramalist Instagram pagina"></a></li>
+				<li><a href="#"> <img src="" alt="Mydramalist Youtube pagina"></a></li>
 			</ul>
 			<ul>
-				<li><a href="#"> Download on the App Store </a></li>
-				<li><a href="#"> Download on the Google Play </a></li>
+				<li><a href="#"> <img src="" alt="Download on the App Store"></a></li>
+				<li><a href="#"> <img src="" alt="Download on the Google Play"> </a></li>
 			</ul>
 		</section>
 
