--- a/index.html
+++ b/index.html
@@ -17,13 +17,14 @@
 <!--HEADER-->
 	
 	<header>
-		<button aria-hidden="true"><img src="../FED-Herkansing-24-25/images/iconen/menuburgerwhite.svg" alt="menu open"/></button>
-
 		<a><img src="../FED-Herkansing-24-25/images/iconen/logo.png" alt="Mydramalist logo, you are currently on the homepage"></a>
+
+	<section>
+		<button aria-hidden="true"><img src="../FED-Herkansing-24-25/images/iconen/menuburgerwhite.svg" alt="menu open"/></button>
 		<button aria-hidden="true"><img src="../FED-Herkansing-24-25/images/iconen/searchiconwhite.svg" alt="search "/></button>
 		<button aria-hidden="true"><img src="../FED-Herkansing-24-25/images/iconen/bell.svg" alt="notifications"/></button>
 		<button aria-hidden="true"><img src="../FED-Herkansing-24-25/images/iconen/profielfoto.png" alt="profile "/></button>
-
+	</section>	
 
 		<nav>
 			<button aria-hidden="true"><img src="../FED-Herkansing-24-25/images/iconen/menhamburgersluit.svg" alt="menu sluiten"/></button>
@@ -103,33 +104,38 @@
 
 		<ul>
 			<li>
-				<a href="#"><img src="../FED-Herkansing-24-25/images/section2/lovenextdoor.jpg" alt="Love Next Door Actors"> </a>
+				<a href="#"><img src="../FED-Herkansing-24-25/images/section2/lovenextdoor.jpg" alt="Love Next Door Actors"> 
 				<h3>Love Next Door Actors Bid Farewell with Final Remarks</h3>
 				<p>News</p>
+				</a>	
 			</li>
 
 			<li>
-				<a href="#"><img src="../FED-Herkansing-24-25/images/section2/superhero.jpg" alt="Kang Mi Na, Ji Chang Wook and Seo In Guk "> </a>
+				<a href="#"><img src="../FED-Herkansing-24-25/images/section2/superhero.jpg" alt="Kang Mi Na, Ji Chang Wook and Seo In Guk "> 
 				<h3>Kang Mi Na will reportedly reunite with Ji Chang Wook and Seo In Guk in the upcoming superhero K-drama</h3>
 				<p>News</p>
+				</a>
 			</li>
 
 			<li>
-				<a href="#"><img src="../FED-Herkansing-24-25/images/section2/superhero.jpg" alt="Myths and Legends of Asia"> </a>
+				<a href="#"><img src="../FED-Herkansing-24-25/images/section2/mythsandlegends.png" alt="Myths and Legends of Asia"> 
 				<h3>Myths and Legends of Asia</h3>
 				<p>Editorials</p>
+				</a>
 			</li>
 
 			<li>
-				<a href="#"><img src="../FED-Herkansing-24-25/images/section2/superhero.jpg" alt="Posters for Uprising"> </a>
+				<a href="#"><img src="../FED-Herkansing-24-25/images/section2/uprising.jpeg" alt="Posters for Uprising"> 
 				<h3>Netflix Releases Still and Posters for "Uprising"</h3>
 				<p>News</p>
+				</a>
 			</li>
 
 			<li>
-				<a href="#"><img src="../FED-Herkansing-24-25/images/section2/superhero.jpg" alt="Jeongwoo "> </a>
+				<a href="#"><img src="../FED-Herkansing-24-25/images/section2/ashopforkillers.jpg" alt="Jeongwoo ">
 				<h3>"A Shop for Killers" Park Jeong Woo to join the cast of the upcoming K-drama "Spice up Our Love"</h3>
 				<p>News</p>
+				</a>
 			</li>
 		</ul>
 
@@ -144,7 +150,35 @@
 		<a href="#">more >></a>
 
 		<ul> 
-			<li><a href="#"><img src="" alt=""></a></li>
+			<li>
+				<a href="#"><img src="../FED-Herkansing-24-25/images/posters/businessproposal.jpg" alt="Business proposal"> <p> Business Proposal</p></a>
+				<p>Korean Drama</p>
+			</li>
+
+			<li>
+				<a href="#"><img src="../FED-Herkansing-24-25/images/posters/lovenextdoor.jpg" alt="Love next door"> <p> Love Next Door</p></a>
+				<p>Korean Drama</p>
+			</li>
+
+			<li>
+				<a href="#"><img src="../FED-Herkansing-24-25/images/posters/goldenkamuy.jpg" alt="Golden Kamuy"> <p> Golden Kamuy</p></a>
+				<p>Japanese Drama</p>
+			</li>
+
+			<li>
+				<a href="#"><img src="../FED-Herkansing-24-25/images/posters/blackout.jpg" alt="Black out"> <p> Black Out</p></a>
+				<p>Korean Drama</p>
+			</li>
+
+			<li>
+				<a href="#"><img src="../FED-Herkansing-24-25/images/posters/alchemyofsouls.jpg" alt="Alchemy of Souls"> <p> Alchemy of Souls</p></a>
+				<p>Korean Drama</p>
+			</li>
+
+			<li>
+				<a href="#"><img src="../FED-Herkansing-24-25/images/posters/vincenzo.jpg" alt="vincenzo"> <p> Vincenzo</p></a>
+				<p>Korean Drama</p>
+			</li>
 		</ul>
 	</section>
 <!--EIND-section 3-->
@@ -202,15 +236,23 @@
 		<h2>Popular voting lists?</h2>
 		<a href="#">more >></a>
 
-		<h3>Best K-dramas for beginners</h3>
-			<ul> 
-				<li><a href="#"><img src="" alt=""></a></li>
-			</ul>
+		<h3>Drama's you wish you could watch for the first time again</h3>
+		<ul> 
+			<li><a href="#"><img src="../FED-Herkansing-24-25/images/section6/flowerofevil.jpeg" alt=""></a></li>
+			<li><a href="#"><img src="../FED-Herkansing-24-25/images/section6/theuntamed.jpeg" alt=""></a></li>
+			<li><a href="#"><img src="../FED-Herkansing-24-25/images/section6/itsokaytonotbeokay.jpeg" alt=""></a></li>
+			<li><a href="#"><img src="../FED-Herkansing-24-25/images/section6/hospitalplaylist.jpeg" alt=""></a></li>
+			<li><a href="#"><img src="../FED-Herkansing-24-25/images/section6/weakheroclass1.jpeg" alt=""></a></li>
+		</ul>
 
-		<h3>Help me pick my next watch!</h3>
-			<ul> 
-				<li><a href="#"><img src="" alt=""></a></li>
-			</ul>
+		<h3>Favourite Chinese Actors</h3>
+		<ul> 
+			<li><a href="#"><img src="../FED-Herkansing-24-25/images/section6/xiaozhan.jpeg" alt=""></a></li>
+			<li><a href="#"><img src="../FED-Herkansing-24-25/images/section6/chenzheyuan.jpeg" alt=""></a></li>
+			<li><a href="#"><img src="../FED-Herkansing-24-25/images/section6/lixian.jpeg" alt=""></a></li>
+			<li><a href="#"><img src="../FED-Herkansing-24-25/images/section6/wangxingyue.jpeg" alt=""></a></li>
+			<li><a href="#"><img src="../FED-Herkansing-24-25/images/section6/zhanglinghe.jpeg" alt=""></a></li>
+		</ul>
 	</section>
 <!--EIND-section (8)6-->
 
