--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
 				<a href="#"><img src="../FED-Herkansing-24-25/images/section2/lovenextdoor.jpg" alt="Love Next Door Actors"> 
 				<h3>Love Next Door Actors Bid Farewell with Final Remarks</h3>
 				<p>News</p>
+				<p>andere kleine tekst womp womp</p>
 				</a>	
 			</li>
 
@@ -114,6 +115,8 @@
 				<a href="#"><img src="../FED-Herkansing-24-25/images/section2/superhero.jpg" alt="Kang Mi Na, Ji Chang Wook and Seo In Guk "> 
 				<h3>Kang Mi Na will reportedly reunite with Ji Chang Wook and Seo In Guk in the upcoming superhero K-drama</h3>
 				<p>News</p>
+				<p>andere kleine tekst womp womp</p>
+
 				</a>
 			</li>
 
@@ -121,6 +124,8 @@
 				<a href="#"><img src="../FED-Herkansing-24-25/images/section2/mythsandlegends.png" alt="Myths and Legends of Asia"> 
 				<h3>Myths and Legends of Asia</h3>
 				<p>Editorials</p>
+				<p>andere kleine tekst womp womp</p>
+
 				</a>
 			</li>
 
@@ -128,6 +133,8 @@
 				<a href="#"><img src="../FED-Herkansing-24-25/images/section2/uprising.jpeg" alt="Posters for Uprising"> 
 				<h3>Netflix Releases Still and Posters for "Uprising"</h3>
 				<p>News</p>
+				<p>andere kleine tekst womp womp</p>
+
 				</a>
 			</li>
 
@@ -135,6 +142,8 @@
 				<a href="#"><img src="../FED-Herkansing-24-25/images/section2/ashopforkillers.jpg" alt="Jeongwoo ">
 				<h3>"A Shop for Killers" Park Jeong Woo to join the cast of the upcoming K-drama "Spice up Our Love"</h3>
 				<p>News</p>
+				<p>andere kleine tekst womp womp</p>
+
 				</a>
 			</li>
 		</ul>
