--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 			<button aria-hidden="true"><img src="../FED-Herkansing-24-25/images/iconen/menhamburgersluit.svg" alt="menu sluiten"/></button>
 			<ul>
 				<li><h2>Home</h2></li>
-				<li><a href="#">Hide ads</a></li>
+				<li><a href="#" alt="">Hide ads</a></li>
 				<li><a href="#">Calendar</a></li>
 				<li><a href="#">Lists</a></li>
 				<li><a href="#">Feeds</a></li>
