--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
 			<li><a href="#"> Philipines </a></li>
 		</ul>
 
-		<ol>
+		<ul>
 			<li>
 				<a href="#"><img src="../FED-Herkansing-24-25/images/section7/thejudgefromhell.jpg" alt="Kang Mi Na, Ji Chang Wook and Seo In Guk "> 
 					<h3>The Judge from Hell</h3>
@@ -313,7 +313,43 @@
 				</a>
 				<button><img src="../FED-Herkansing-24-25/images/iconen/plus.svg" alt="Add drama to watch list"></button>
 			</li>
-		</ol>
+
+			<li>
+				<a href="#"><img src="../FED-Herkansing-24-25/images/section7/familybychoice.jpg" alt="Kang Mi Na, Ji Chang Wook and Seo In Guk "> 
+					<h3>Family by Choice</h3>
+					<p>Korean Drama, 16 episodes</p>
+					<p>20,540 Watchers</p>
+				</a>
+				<button><img src="../FED-Herkansing-24-25/images/iconen/plus.svg" alt="Add drama to watch list"></button>
+			</li>
+
+			<li>
+				<a href="#"><img src="../FED-Herkansing-24-25/images/section7/letfreethecurseoftaekwondo.jpg" alt="Kang Mi Na, Ji Chang Wook and Seo In Guk "> 
+					<h3>Let Free the Curse of Taekwondo</h3>
+					<p>Korean Drama, 8 episodes</p>
+					<p>8,844 Watchers</p>
+				</a>
+				<button><img src="../FED-Herkansing-24-25/images/iconen/plus.svg" alt="Add drama to watch list"></button>
+			</li>
+
+			<li>
+				<a href="#"><img src="../FED-Herkansing-24-25/images/section7/avirtuousbusiness.jpg" alt="Kang Mi Na, Ji Chang Wook and Seo In Guk "> 
+					<h3>A Virtuous Business</h3>
+					<p>Korean Drama, 12 episodes</p>
+					<p>5,036 Watchers</p>
+				</a>
+				<button><img src="../FED-Herkansing-24-25/images/iconen/plus.svg" alt="Add drama to watch list"></button>
+			</li>
+
+			<li>
+				<a href="#"><img src="../FED-Herkansing-24-25/images/section7/seoulbusters.jpg" alt="Kang Mi Na, Ji Chang Wook and Seo In Guk "> 
+					<h3>Seoul Busters</h3>
+					<p>Korean Drama, 20 episodes</p>
+					<p>4,564 Watchers</p>
+				</a>
+				<button><img src="../FED-Herkansing-24-25/images/iconen/plus.svg" alt="Add drama to watch list"></button>
+			</li>
+		</ul>
 	</section>
 </main>
 <!--EIND-section (9)7-->
