--- a/index.html
+++ b/index.html
@@ -19,18 +19,36 @@
 	<header>
 		<a><img src="../FED-Herkansing-24-25/images/iconen/logo.png" alt="Mydramalist logo, you are currently on the homepage"></a>
 
-	<section>
-		<button aria-hidden="true"><img src="../FED-Herkansing-24-25/images/iconen/menuburgerwhite.svg" alt="menu open"/></button>
-		<button aria-hidden="true"><img src="../FED-Herkansing-24-25/images/iconen/searchiconwhite.svg" alt="search "/></button>
-		<button aria-hidden="true"><img src="../FED-Herkansing-24-25/images/iconen/bell.svg" alt="notifications"/></button>
-		<button aria-hidden="true"><img src="../FED-Herkansing-24-25/images/iconen/profielfoto.png" alt="profile "/></button>
-	</section>	
+		<section>
+			<button aria-hidden="true"><img src="../FED-Herkansing-24-25/images/iconen/menuburgerwhite.svg" alt="menu open"/></button>
+			<button aria-hidden="true"><img src="../FED-Herkansing-24-25/images/iconen/searchiconwhite.svg" alt="search "/></button>
+			<button aria-hidden="true"><img src="../FED-Herkansing-24-25/images/iconen/bell.svg" alt="notifications"/></button>
+			<button aria-hidden="true"><img src="../FED-Herkansing-24-25/images/iconen/profielfoto.png" alt="profile "/></button>
+		</section>	
+
+
+			<!-- <ul>
+				<li><a<a href="#">Messages</a></li>
+				<li><a<a href="#">Friends</a></li>
+				<li><a<a href="#">Profile</a></li>
+				<li><a<a href="#">My Watchlist</a></li>
+				<li><a<a href="#">Custom Lists</a></li>
+				<li><a<a href="#">Airing Calendar</a></li>
+				<li><a<a href="#">Feeds</a></li>
+				<li><a<a href="#">Personalized Recommendations</a></li>
+				<li><a<a href="#">Coins</a></li>
+				<li><a<a href="#">Settings</a></li>
+				<li><a<a href="#">VIP Forum</a></li>
+				<li><a<a href="#">Dark Mode</a></li>
+				<li><a<a href="#">Sign out</a></li>
+				<li><a<a href="#">Need Help?</a></li>
+			</ul> -->
 
 		<nav>
 			<button aria-hidden="true"><img src="../FED-Herkansing-24-25/images/iconen/menhamburgersluit.svg" alt="menu sluiten"/></button>
 			<ul>
 				<li><h2>Home</h2></li>
-				<li><a href="#" alt="">Hide ads</a></li>
+				<li><a href="#">Hide ads</a></li>
 				<li><a href="#">Calendar</a></li>
 				<li><a href="#">Lists</a></li>
 				<li><a href="#">Feeds</a></li>
