--- a/index.html
+++ b/index.html
@@ -312,6 +312,7 @@
 	<section>
 		<h2>Top airing shows</h2>
 		<a href="#">more&gt;&gt;</a>
+
 		<ul>
 			<li><a href="#"> South Korea </a></li>
 			<li><a href="#"> China </a></li>
@@ -324,47 +325,92 @@
 
 		<ul>
 			<li>
-				<a href="#"><img src="../FED-Herkansing-24-25/images/section7/thejudgefromhell.jpg" alt="Kang Mi Na, Ji Chang Wook and Seo In Guk "> 
-					<h3>The Judge from Hell</h3>
-					<p>Korean Drama, 14 episodes</p>
-					<p>26,841 Watchers</p>
-				</a>
+				<p>1</p>
+				<img src="../FED-Herkansing-24-25/images/section7/thejudgefromhell.jpg" alt="Kang Mi Na, Ji Chang Wook and Seo In Guk "> 
+					<a href="#">
+						<ul>
+							<li><h3>The Judge from Hell</h3></li>
+							<li> <span>☆</span> 
+								<span>☆</span> 
+								<span>☆</span> 
+								<span>☆</span> 
+								<span>☆</span> <p>8.7</p></li>
+							<li><p>Korean Drama, 14 episodes</p></li>
+							<li><p>26,841 Watchers</p></li>
+						</ul>
+					</a>
 				<button><img src="../FED-Herkansing-24-25/images/iconen/plus.svg" alt="Add drama to watch list"></button>
 			</li>
 
 			<li>
-				<a href="#"><img src="../FED-Herkansing-24-25/images/section7/familybychoice.jpg" alt="Kang Mi Na, Ji Chang Wook and Seo In Guk "> 
-					<h3>Family by Choice</h3>
-					<p>Korean Drama, 16 episodes</p>
-					<p>20,540 Watchers</p>
-				</a>
+				<p>2</p>
+				<img src="../FED-Herkansing-24-25/images/section7/familybychoice.jpg" alt="Kang Mi Na, Ji Chang Wook and Seo In Guk "> 
+					<a href="#">
+						<ul>
+							<li><h3>Family by Choice</h3></li>
+							<li> <span>☆</span> 
+								<span>☆</span> 
+								<span>☆</span> 
+								<span>☆</span> 
+								<span>☆</span></li>
+							<li><p>Korean Drama, 16 episodes</p></li>
+							<li><p>20,540 Watchers</p></li>
+						</ul>
+					</a>
 				<button><img src="../FED-Herkansing-24-25/images/iconen/plus.svg" alt="Add drama to watch list"></button>
 			</li>
 
 			<li>
-				<a href="#"><img src="../FED-Herkansing-24-25/images/section7/letfreethecurseoftaekwondo.jpg" alt="Kang Mi Na, Ji Chang Wook and Seo In Guk "> 
-					<h3>Let Free the Curse of Taekwondo</h3>
-					<p>Korean Drama, 8 episodes</p>
-					<p>8,844 Watchers</p>
-				</a>
+				<p>2</p>
+				<img src="../FED-Herkansing-24-25/images/section7/familybychoice.jpg" alt="Kang Mi Na, Ji Chang Wook and Seo In Guk "> 
+					<a href="#">
+						<ul>
+							<li><h3>Family by Choice</h3></li>
+							<li> <span>☆</span> 
+								<span>☆</span> 
+								<span>☆</span> 
+								<span>☆</span> 
+								<span>☆</span></li>
+							<li><p>Korean Drama, 16 episodes</p></li>
+							<li><p>20,540 Watchers</p></li>
+						</ul>
+					</a>
 				<button><img src="../FED-Herkansing-24-25/images/iconen/plus.svg" alt="Add drama to watch list"></button>
 			</li>
 
 			<li>
-				<a href="#"><img src="../FED-Herkansing-24-25/images/section7/avirtuousbusiness.jpg" alt="Kang Mi Na, Ji Chang Wook and Seo In Guk "> 
-					<h3>A Virtuous Business</h3>
-					<p>Korean Drama, 12 episodes</p>
-					<p>5,036 Watchers</p>
-				</a>
+				<p>2</p>
+				<img src="../FED-Herkansing-24-25/images/section7/familybychoice.jpg" alt="Kang Mi Na, Ji Chang Wook and Seo In Guk "> 
+					<a href="#">
+						<ul>
+							<li><h3>Family by Choice</h3></li>
+							<li> <span>☆</span> 
+								<span>☆</span> 
+								<span>☆</span> 
+								<span>☆</span> 
+								<span>☆</span></li>
+							<li><p>Korean Drama, 16 episodes</p></li>
+							<li><p>20,540 Watchers</p></li>
+						</ul>
+					</a>
 				<button><img src="../FED-Herkansing-24-25/images/iconen/plus.svg" alt="Add drama to watch list"></button>
 			</li>
 
 			<li>
-				<a href="#"><img src="../FED-Herkansing-24-25/images/section7/seoulbusters.jpg" alt="Kang Mi Na, Ji Chang Wook and Seo In Guk "> 
-					<h3>Seoul Busters</h3>
-					<p>Korean Drama, 20 episodes</p>
-					<p>4,564 Watchers</p>
-				</a>
+				<p>2</p>
+				<img src="../FED-Herkansing-24-25/images/section7/familybychoice.jpg" alt="Kang Mi Na, Ji Chang Wook and Seo In Guk "> 
+					<a href="#">
+						<ul>
+							<li><h3>Family by Choice</h3></li>
+							<li> <span>☆</span> 
+								<span>☆</span> 
+								<span>☆</span> 
+								<span>☆</span> 
+								<span>☆</span></li>
+							<li><p>Korean Drama, 16 episodes</p></li>
+							<li><p>20,540 Watchers</p></li>
+						</ul>
+					</a>
 				<button><img src="../FED-Herkansing-24-25/images/iconen/plus.svg" alt="Add drama to watch list"></button>
 			</li>
 		</ul>
