--- a/index.html
+++ b/index.html
@@ -86,29 +86,13 @@
 
 <!--section 1-->
 		<section>
-			<ul>
-				<li>
-					<h2>"Love Next door" Actors Bid Farewell with Final Remarks</h2>
-					<p>News</p>
-					<img src="../FED-Herkansing-24-25/images/section1/lovenextdoor.jpeg" alt="">
-				</li>
-					
-				<!-- <li>
-					<h2>Kang Mi Na will reportedly reunite with Ji Chang Wook and Seo In Guk in the upcoming superhero K-drama</h2>
-					<p>News</p>
-					<img src="../FED-Herkansing-24-25/images/section1/superhero.jpg" alt="">
-				</li>
 
-				<li>
-					<h2>Netflix Releases Stills and Posters for "Uprising"</h2>
+					<h2>Koo Kyo Hwan and Shin Hyun Been will reportedly join Jun Ji Hyun in a new film</h2>
 					<p>News</p>
-					<img src="../FED-Herkansing-24-25/images/section1/uprising.jpeg" alt="">
-				</li> -->
-			</ul>
-
-			<button class="prev" onclick="moveSlide(-1)">&#10094;</button>
-			<button class="next" onclick="moveSlide(1)">&#10095;</button>
-
+					<img src="../FED-Herkansing-24-25/images/section1/newfilm.png" alt="">
+					<p> 15 hours ago</p>
+					<img src="../FED-Herkansing-24-25/images/iconen/heart.svg" alt=""> 
+					<img src="../FED-Herkansing-24-25/images/iconen/chat.svg" alt=""> 
 		</section>
 <!--EIND-section 1-->
 
@@ -361,54 +345,54 @@
 			</li>
 
 			<li>
-				<p>2</p>
-				<img src="../FED-Herkansing-24-25/images/section7/familybychoice.jpg" alt="Kang Mi Na, Ji Chang Wook and Seo In Guk "> 
+				<p>3</p>
+				<img src="../FED-Herkansing-24-25/images/section7/letfreethecurseoftaekwondo.jpg" alt="Kang Mi Na, Ji Chang Wook and Seo In Guk "> 
 					<a href="#">
 						<ul>
-							<li><h3>Family by Choice</h3></li>
+							<li><h3>Let Free the Curse of Taekwondo</h3></li>
 							<li> <span>☆</span> 
 								<span>☆</span> 
 								<span>☆</span> 
 								<span>☆</span> 
 								<span>☆</span></li>
-							<li><p>Korean Drama, 16 episodes</p></li>
-							<li><p>20,540 Watchers</p></li>
+							<li><p>Korean Drama, 8 episodes</p></li>
+							<li><p>8, 844 Watchers</p></li>
 						</ul>
 					</a>
 				<button><img src="../FED-Herkansing-24-25/images/iconen/plus.svg" alt="Add drama to watch list"></button>
 			</li>
 
 			<li>
-				<p>2</p>
-				<img src="../FED-Herkansing-24-25/images/section7/familybychoice.jpg" alt="Kang Mi Na, Ji Chang Wook and Seo In Guk "> 
+				<p>4</p>
+				<img src="../FED-Herkansing-24-25/images/section7/avirtuousbusiness.jpg" alt="Kang Mi Na, Ji Chang Wook and Seo In Guk "> 
 					<a href="#">
 						<ul>
-							<li><h3>Family by Choice</h3></li>
+							<li><h3>A Virtuous Business</h3></li>
 							<li> <span>☆</span> 
 								<span>☆</span> 
 								<span>☆</span> 
 								<span>☆</span> 
 								<span>☆</span></li>
-							<li><p>Korean Drama, 16 episodes</p></li>
-							<li><p>20,540 Watchers</p></li>
+							<li><p>Korean Drama, 12 episodes</p></li>
+							<li><p>5, 036 Watchers</p></li>
 						</ul>
 					</a>
 				<button><img src="../FED-Herkansing-24-25/images/iconen/plus.svg" alt="Add drama to watch list"></button>
 			</li>
 
 			<li>
-				<p>2</p>
-				<img src="../FED-Herkansing-24-25/images/section7/familybychoice.jpg" alt="Kang Mi Na, Ji Chang Wook and Seo In Guk "> 
+				<p>5</p>
+				<img src="../FED-Herkansing-24-25/images/section7/seoulbusters.jpg" alt="Kang Mi Na, Ji Chang Wook and Seo In Guk "> 
 					<a href="#">
 						<ul>
-							<li><h3>Family by Choice</h3></li>
+							<li><h3>Seoul Busters</h3></li>
 							<li> <span>☆</span> 
 								<span>☆</span> 
 								<span>☆</span> 
 								<span>☆</span> 
 								<span>☆</span></li>
-							<li><p>Korean Drama, 16 episodes</p></li>
-							<li><p>20,540 Watchers</p></li>
+							<li><p>Korean Drama, 20 episodes</p></li>
+							<li><p>4, 564 Watchers</p></li>
 						</ul>
 					</a>
 				<button><img src="../FED-Herkansing-24-25/images/iconen/plus.svg" alt="Add drama to watch list"></button>
