--- a/index.html
+++ b/index.html
@@ -406,16 +406,30 @@
 	<footer>
 		<section>
 			<img src="../FED-Herkansing-24-25/images/iconen/footerlogo.webp" alt="My drama list logo in de footer">
+			<p>&copy; Copyright 2024. All rights reserved</p>
 			
 			<ul>
-				<li><a href="#"><img src="" alt="Mydramalist facebook pagina"></a></li>
-				<li><a href="#"><img src="" alt="Mydramalist X pagina"> </a></li>
-				<li><a href="#"><img src="" alt="Mydramalist Instagram pagina"></a></li>
-				<li><a href="#"> <img src="" alt="Mydramalist Youtube pagina"></a></li>
+				<li><a href="#"><img src="../FED-Herkansing-24-25/images/iconen/facebookicoon.svg" alt="Mydramalist facebook pagina"></a></li>
+				<li><a href="#"><img src="../FED-Herkansing-24-25/images/iconen/twittericoon.svg" alt="Mydramalist X pagina"> </a></li>
+				<li><a href="#"><img src="../FED-Herkansing-24-25/images/iconen/instagramicoon.svg" alt="Mydramalist Instagram pagina"></a></li>
+				<li><a href="#"> <img src="../FED-Herkansing-24-25/images/iconen/youtubeicoon.svg" alt="Mydramalist Youtube pagina"></a></li>
 			</ul>
 			<ul>
-				<li><a href="#"> <img src="" alt="Download on the App Store"></a></li>
-				<li><a href="#"> <img src="" alt="Download on the Google Play"> </a></li>
+				<li>
+					<a href="#">
+						<img src="../FED-Herkansing-24-25/images/iconen/appleicoon.svg" alt="Download on the my dramalist app, Apple Store">
+						<p>Download on the</p>
+						<p>App Store</p>
+					</a>
+				</li>
+
+				<li>
+					<a href="#">
+						<img src="../FED-Herkansing-24-25/images/iconen/playstoreicoon.svg" alt="Download on the my dramalist app, Google Play"> 
+						<p>Download on</p>
+						<p>Google Play</p>
+					</a>
+				</li>
 			</ul>
 		</section>
 
