--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 <!--HEADER-->
 	
 	<header>
-		<a><img src="../FED-Herkansing-24-25/images/iconen/logo.png" alt="Mydramalist logo, you are currently on the homepage"></a>
+		<a><h1>mdl</h1></a>
+
 
 		<section>
 			<button aria-hidden="true"><img src="../FED-Herkansing-24-25/images/iconen/menuburgerwhite.svg" alt="menu open"/></button>
@@ -82,8 +83,6 @@
 
 <!--MAIN-->
 	<main>
-		<h1>Discover, Discuss and Organize</h1>
-
 <!--section 1-->
 		<section>
 
@@ -163,7 +162,7 @@
 
 <!--section 3-->
 	<section>
-		<h2>Latest Reviews</h2>
+		<h2>Trending this week</h2>
 		<a href="#">more&gt;&gt;</a>
 
 		<ul> 
@@ -202,7 +201,7 @@
 
 <!--section 4-->
 	<section>
-		<h2>Trending this week</h2>
+		<h2>Latest Reviews</h2>
 		<a href="#">more&gt;&gt;</a>
 		<ul> 
 			<li>
