--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <!--HEADER-->
 	
 	<header>
-		<a><h1>mdl</h1></a>
+		<a><h1> <abbr title="My drama list homepage">mdl</abbr></h1></a>
 
 
 		<section>
