--- a/profile.html
+++ b/profile.html
@@ -21,7 +21,7 @@
 <!--SECTION 1  -->
         <section>
 			<h2>dpdShadow</h2>
-			<img>
+			<img src="../FED-Herkansing-24-25/images/iconen/profile.jpeg" alt="Profile picture"> 
 			<ul>
 				<li><button>Profile</button></li>
 				<li><button>Feeds</button></li>
