--- a/index.html
+++ b/index.html
@@ -85,13 +85,14 @@
 	<main>
 <!--section 1-->
 		<section>
-
+			<a href="#">
 					<h2>Koo Kyo Hwan and Shin Hyun Been will reportedly join Jun Ji Hyun in a new film</h2>
 					<p>News</p>
 					<img src="../FED-Herkansing-24-25/images/section1/newfilm.png" alt="">
 					<p> 15 hours ago</p>
 					<img src="../FED-Herkansing-24-25/images/iconen/heart.svg" alt=""> 
 					<img src="../FED-Herkansing-24-25/images/iconen/chat.svg" alt=""> 
+				</a>		
 		</section>
 <!--EIND-section 1-->
 
