--- a/index.html
+++ b/index.html
@@ -216,31 +216,85 @@
 		<a href="#">more&gt;&gt;</a>
 		<ul> 
 			<li>
+				<ol>
+					<li><p>10</p></li>
+					<li><span>☆</span> 
+						<span>☆</span> 
+						<span>☆</span> 
+						<span>☆</span> 
+						<span>☆</span></li>
+				</ol>
+
 				<a href="#"><img src="../FED-Herkansing-24-25/images/posters/businessproposal.jpg" alt="Business proposal"> <p> Business Proposal</p></a>
 				<p>Korean Drama</p>
 			</li>
 
 			<li>
+				<ol>
+					<li><p>9</p></li>
+					<li><span>☆</span> 
+						<span>☆</span> 
+						<span>☆</span> 
+						<span>☆</span> 
+						<span>☆</span></li>
+				</ol>
+
 				<a href="#"><img src="../FED-Herkansing-24-25/images/posters/lovenextdoor.jpg" alt="Love next door"> <p> Love Next Door</p></a>
 				<p>Korean Drama</p>
 			</li>
 
 			<li>
+				<ol>
+					<li><p>8</p></li>
+					<li><span>☆</span> 
+						<span>☆</span> 
+						<span>☆</span> 
+						<span>☆</span> 
+						<span>☆</span></li>
+				</ol>
+
 				<a href="#"><img src="../FED-Herkansing-24-25/images/posters/goldenkamuy.jpg" alt="Golden Kamuy"> <p> Golden Kamuy</p></a>
 				<p>Japanese Drama</p>
 			</li>
 
 			<li>
+				<ol>
+					<li><p>5</p></li>
+					<li><span>☆</span> 
+						<span>☆</span> 
+						<span>☆</span> 
+						<span>☆</span> 
+						<span>☆</span></li>
+				</ol>
+
 				<a href="#"><img src="../FED-Herkansing-24-25/images/posters/blackout.jpg" alt="Black out"> <p> Black Out</p></a>
 				<p>Korean Drama</p>
 			</li>
 
 			<li>
+				<ol>
+					<li><p>10</p></li>
+					<li><span>☆</span> 
+						<span>☆</span> 
+						<span>☆</span> 
+						<span>☆</span> 
+						<span>☆</span></li>
+				</ol>
+
 				<a href="#"><img src="../FED-Herkansing-24-25/images/posters/alchemyofsouls.jpg" alt="Alchemy of Souls"> <p> Alchemy of Souls</p></a>
 				<p>Korean Drama</p>
 			</li>
 
 			<li>
+				<ol>
+					<li><p>8</p></li>
+					<li><span>☆</span> 
+						<span>☆</span> 
+						<span>☆</span> 
+						<span>☆</span> 
+						<span>☆</span></li>
+				</ol>
+
 				<a href="#"><img src="../FED-Herkansing-24-25/images/posters/vincenzo.jpg" alt="vincenzo"> <p> Vincenzo</p></a>
 				<p>Korean Drama</p>
 			</li>
@@ -409,8 +463,9 @@
 			</li>
 		</ul>
 	</section>
-</main>
 <!--EIND-section (9)7-->
+</main>
+
 
 <!--FOOTER-->	
 	<footer>
