--- a/index.html
+++ b/index.html
@@ -373,95 +373,44 @@
 
 		<ul>
 			<li>
-				<p>1</p>
-				<img src="../FED-Herkansing-24-25/images/section7/thejudgefromhell.jpg" alt="Kang Mi Na, Ji Chang Wook and Seo In Guk "> 
-					<a href="#">
-						<ul>
-							<li><h3>The Judge from Hell</h3></li>
-							<li> <span>☆</span> 
-								<span>☆</span> 
-								<span>☆</span> 
-								<span>☆</span> 
-								<span>☆</span> <p>8.7</p></li>
-							<li><p>Korean Drama, 14 episodes</p></li>
-							<li><p>26,841 Watchers</p></li>
-						</ul>
-					</a>
-				<button><img src="../FED-Herkansing-24-25/images/iconen/plus.svg" alt="Add drama to watch list"></button>
+				<a href="#">
+					<p>1</p>
+					<img src="../FED-Herkansing-24-25/images/section7/thejudgefromhell.jpg" alt="Kang Mi Na, Ji Chang Wook and Seo In Guk "> 
+					<h3>High&Low: The Worst X</h3>
+					<ul>
+						<li><span>☆</span> 
+							<span>☆</span> 
+							<span>☆</span> 
+							<span>☆</span> 
+							<span>☆</span></li>
+						<li>9</li>	
+					</ul>
+					<p>Korean Drama, 12 episode</p>
+					<p>00,000 Watchers</p>
+				</a>
+				<button><img src="../FED-Herkansing-24-25/images/iconen/plus.svg" alt="Change information about added drama"></button>
 			</li>
 
 			<li>
-				<p>2</p>
-				<img src="../FED-Herkansing-24-25/images/section7/familybychoice.jpg" alt="Kang Mi Na, Ji Chang Wook and Seo In Guk "> 
-					<a href="#">
-						<ul>
-							<li><h3>Family by Choice</h3></li>
-							<li> <span>☆</span> 
-								<span>☆</span> 
-								<span>☆</span> 
-								<span>☆</span> 
-								<span>☆</span></li>
-							<li><p>Korean Drama, 16 episodes</p></li>
-							<li><p>20,540 Watchers</p></li>
-						</ul>
-					</a>
-				<button><img src="../FED-Herkansing-24-25/images/iconen/plus.svg" alt="Add drama to watch list"></button>
-			</li>
-
-			<li>
-				<p>3</p>
-				<img src="../FED-Herkansing-24-25/images/section7/letfreethecurseoftaekwondo.jpg" alt="Kang Mi Na, Ji Chang Wook and Seo In Guk "> 
-					<a href="#">
-						<ul>
-							<li><h3>Let Free the Curse of Taekwondo</h3></li>
-							<li> <span>☆</span> 
-								<span>☆</span> 
-								<span>☆</span> 
-								<span>☆</span> 
-								<span>☆</span></li>
-							<li><p>Korean Drama, 8 episodes</p></li>
-							<li><p>8, 844 Watchers</p></li>
-						</ul>
-					</a>
-				<button><img src="../FED-Herkansing-24-25/images/iconen/plus.svg" alt="Add drama to watch list"></button>
-			</li>
-
-			<li>
-				<p>4</p>
-				<img src="../FED-Herkansing-24-25/images/section7/avirtuousbusiness.jpg" alt="Kang Mi Na, Ji Chang Wook and Seo In Guk "> 
-					<a href="#">
-						<ul>
-							<li><h3>A Virtuous Business</h3></li>
-							<li> <span>☆</span> 
-								<span>☆</span> 
-								<span>☆</span> 
-								<span>☆</span> 
-								<span>☆</span></li>
-							<li><p>Korean Drama, 12 episodes</p></li>
-							<li><p>5, 036 Watchers</p></li>
-						</ul>
-					</a>
-				<button><img src="../FED-Herkansing-24-25/images/iconen/plus.svg" alt="Add drama to watch list"></button>
-			</li>
-
-			<li>
-				<p>5</p>
-				<img src="../FED-Herkansing-24-25/images/section7/seoulbusters.jpg" alt="Kang Mi Na, Ji Chang Wook and Seo In Guk "> 
-					<a href="#">
-						<ul>
-							<li><h3>Seoul Busters</h3></li>
-							<li> <span>☆</span> 
-								<span>☆</span> 
-								<span>☆</span> 
-								<span>☆</span> 
-								<span>☆</span></li>
-							<li><p>Korean Drama, 20 episodes</p></li>
-							<li><p>4, 564 Watchers</p></li>
-						</ul>
-					</a>
-				<button><img src="../FED-Herkansing-24-25/images/iconen/plus.svg" alt="Add drama to watch list"></button>
+				<a href="#">
+					<p>2</p>
+					<img src="../FED-Herkansing-24-25/images/section7/thejudgefromhell.jpg" alt="Kang Mi Na, Ji Chang Wook and Seo In Guk "> 
+					<h3>High&Low: The Worst X</h3>
+					<ul>
+						<li><span>☆</span> 
+							<span>☆</span> 
+							<span>☆</span> 
+							<span>☆</span> 
+							<span>☆</span></li>
+						<li>9</li>	
+					</ul>
+					<p>Completed</p>
+					<p>13 hours ago</p>
+				</a>
+				<button><img src="../FED-Herkansing-24-25/images/iconen/plus.svg" alt="Change information about added drama"></button>
 			</li>
 		</ul>
+	
 	</section>
 <!--EIND-section (9)7-->
 </main>
