--- a/index.html
+++ b/index.html
@@ -376,36 +376,93 @@
 				<a href="#">
 					<p>1</p>
 					<img src="../FED-Herkansing-24-25/images/section7/thejudgefromhell.jpg" alt="Kang Mi Na, Ji Chang Wook and Seo In Guk "> 
-					<h3>High&Low: The Worst X</h3>
+					<h3>The Judge from Hell</h3>
 					<ul>
 						<li><span>☆</span> 
 							<span>☆</span> 
 							<span>☆</span> 
 							<span>☆</span> 
 							<span>☆</span></li>
-						<li>9</li>	
+						<li>8.8</li>	
 					</ul>
-					<p>Korean Drama, 12 episode</p>
-					<p>00,000 Watchers</p>
+					<p>Korean Drama, 14 episodes</p>
+					<p>29444 Watchers</p>
+				</a>
+				<button><img src="../FED-Herkansing-24-25/images/iconen/pencil.svg" alt="Change information about added drama"></button>
+			</li>
+
+			<li>
+				<a href="#">
+					<p>2</p>
+					<img src="../FED-Herkansing-24-25/images/section7/familybychoice.jpg" alt="Kang Mi Na, Ji Chang Wook and Seo In Guk "> 
+					<h3>Family by Choice</h3>
+					<ul>
+						<li><span>☆</span> 
+							<span>☆</span> 
+							<span>☆</span> 
+							<span>☆</span> 
+							<span>☆</span></li>
+						<li>8.6</li>	
+					</ul>
+					<p>Korean Drama, 16 episodes</p>
+					<p>21,866 Watchers</p>
 				</a>
 				<button><img src="../FED-Herkansing-24-25/images/iconen/plus.svg" alt="Change information about added drama"></button>
 			</li>
 
 			<li>
 				<a href="#">
-					<p>2</p>
-					<img src="../FED-Herkansing-24-25/images/section7/thejudgefromhell.jpg" alt="Kang Mi Na, Ji Chang Wook and Seo In Guk "> 
-					<h3>High&Low: The Worst X</h3>
+					<p>3</p>
+					<img src="../FED-Herkansing-24-25/images/section7/letfreethecurseoftaekwondo.jpg" alt="Kang Mi Na, Ji Chang Wook and Seo In Guk "> 
+					<h3>Let Free the Cruse of Taekwondo</h3>
 					<ul>
 						<li><span>☆</span> 
 							<span>☆</span> 
 							<span>☆</span> 
 							<span>☆</span> 
 							<span>☆</span></li>
-						<li>9</li>	
+						<li>8.3</li>	
 					</ul>
-					<p>Completed</p>
-					<p>13 hours ago</p>
+					<p>Korean Drama, 8 episodes</p>
+					<p>9,793 Watchers</p>
+				</a>
+				<button><img src="../FED-Herkansing-24-25/images/iconen/plus.svg" alt="Change information about added drama"></button>
+			</li>
+
+			<li>
+				<a href="#">
+					<p>4</p>
+					<img src="../FED-Herkansing-24-25/images/section7/avirtuousbusiness.jpg" alt="Kang Mi Na, Ji Chang Wook and Seo In Guk "> 
+					<h3>A Virtuous Business</h3>
+					<ul>
+						<li><span>☆</span> 
+							<span>☆</span> 
+							<span>☆</span> 
+							<span>☆</span> 
+							<span>☆</span></li>
+						<li>8.2</li>	
+					</ul>
+					<p>Korean Drama, 12 episodes</p>
+					<p>5,699 Watchers</p>
+				</a>
+				<button><img src="../FED-Herkansing-24-25/images/iconen/plus.svg" alt="Change information about added drama"></button>
+			</li>
+
+			<li>
+				<a href="#">
+					<p>5</p>
+					<img src="../FED-Herkansing-24-25/images/section7/seoulbusters.jpg" alt="Kang Mi Na, Ji Chang Wook and Seo In Guk "> 
+					<h3>Seoul Busters</h3>
+					<ul>
+						<li><span>☆</span> 
+							<span>☆</span> 
+							<span>☆</span> 
+							<span>☆</span> 
+							<span>☆</span></li>
+						<li>8.3</li>	
+					</ul>
+					<p>Korean Drama, 20 episodes</p>
+					<p>4,564 Watchers</p>
 				</a>
 				<button><img src="../FED-Herkansing-24-25/images/iconen/plus.svg" alt="Change information about added drama"></button>
 			</li>
